--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel-notification-channels/fcm",
+    "name": "sdwru/fcm",
     "description": "FCM (Firebase Cloud Messaging) Notifications Driver for Laravel",
-    "homepage": "https://github.com/laravel-notification-channels/fcm",
+    "homepage": "https://github.com/sdwru/fcm",
     "license": "MIT",
     "authors": [
         {
@@ -15,7 +15,7 @@
         "php": ">=7.1.3",
         "guzzlehttp/guzzle": "^6.2",
         "illuminate/notifications": "~5.6 || ~6.0 || ~7.0",
-        "illuminate/support": "~5.6 || ~6.0 || ~7.0",
+        "illuminate/support": "~5.6 || ~6.0 || ~7.19",
         "kreait/laravel-firebase": "^1.3",
         "spatie/enum": "^2.3"
     },
