--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "php": ">=7.1.3",
         "guzzlehttp/guzzle": "^6.2",
         "illuminate/notifications": "~5.6 || ~6.0 || ~7.0",
-        "illuminate/support": "~5.6 || ~6.0 || ~7.19",
-        "kreait/laravel-firebase": "^1.3",
+        "illuminate/support": "~5.6 || ~6.0 || ~7.0",
+        "kreait/laravel-firebase": "~2.0",
         "spatie/enum": "^2.3"
     },
     "require-dev": {
