--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "guzzlehttp/guzzle": "^6.2",
         "illuminate/notifications": "~5.6 || ~6.0 || ~7.0",
         "illuminate/support": "~5.6 || ~6.0 || ~7.0",
-        "spatie/enum": "^2.3"
+        "spatie/enum": "^2.3",
+        "sdwru/laravel-firebase-auth-plus": "dev-master"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.5",
