--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "illuminate/notifications": "~5.6 || ~6.0 || ~7.0",
         "illuminate/support": "~5.6 || ~6.0 || ~7.0",
         "spatie/enum": "^2.3",
-        "sdwru/laravel-firebase-auth-plus": "dev-master"
+        "kreait/laravel-firebase": "~2.0"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.5",
